kubernetes/test-nginx-traefik/2_nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - name: https
      protocol: TCP
      port: 80
      targetPort: 80
