kubernetes/test-nginx-traefik/3_nginx-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.k8s-prod-1.home.sauers.link`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  tls:
    secretName: nginx-certificate-secret
